--- a/samsung.html
+++ b/samsung.html
@@ -104,8 +104,8 @@
 <div class="container-fluid">
     <div class="row h-100 align-items-center bg-primary">
         <div class="col text-center">
-            <h1>Samsung</h1>
-            <p>Køb et lækkert cover til din Samsung telefon</p>
+            <h1 class="text">Samsung</h1>
+            <p class="text2">Køb et lækkert cover til din Samsung telefon</p>
         </div>
     </div>
 </div>
