--- a/login.html
+++ b/login.html
@@ -23,6 +23,30 @@
     <link href="css/mikkel_styles.css" rel="stylesheet" type="text/css">
     <link href="css/navogfooter.css" rel="stylesheet" type="text/css">
 
+    <script src="https://kit.fontawesome.com/6e96c3bdd8.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Sacramento&display=swap"
+          rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Pacifico&display=swap"
+          rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Pacifico&display=swap" rel="stylesheet">
+
 
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse - bliver brugt til responsive websider -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,69 +57,65 @@
 
 <body>
 
-<div>
+
 
     <!--Div der indeholder hele sidens grid. Den er parent til alle "grid bokse"-->
-    <div>
+    <div class="container-fluid h-auto navbar-container cole">
+        <div class="navbar row p-3">
 
-        <!--Topbar-->
-        <div class="container-fluid h-auto navbar-container cole">
-            <div class="navbar row p-3">
-                <div class="col-2 d-flex d-lg-none">
-                    <div class="toggle d-flex align-items-center pa">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="21" viewBox="0 0 30 21">
-                            <g id="Icon_feather-menu" data-name="Icon feather-menu" transform="translate(-3 -7.5)">
-                                <path id="Path_1" data-name="Path 1" d="M4.5,18h27" fill="none" stroke="#fbfbfd"
-                                      stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
-                                <path id="Path_2" data-name="Path 2" d="M4.5,9h27" fill="none" stroke="#fbfbfd"
-                                      stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
-                                <path id="Path_3" data-name="Path 3" d="M4.5,27h27" fill="none" stroke="#fbfbfd"
-                                      stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
-                            </g>
-                        </svg>
-                    </div>
+            <div class="col-2 d-flex d-lg-none">
+                <div class="toggle d-flex align-items-center pa">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="21" viewBox="0 0 30 21">
+                        <g id="Icon_feather-menu" data-name="Icon feather-menu" transform="translate(-3 -7.5)">
+                            <path id="Path_1" data-name="Path 1" d="M4.5,18h27" fill="none" stroke="#fbfbfd"
+                                  stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                            <path id="Path_2" data-name="Path 2" d="M4.5,9h27" fill="none" stroke="#fbfbfd"
+                                  stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                            <path id="Path_3" data-name="Path 3" d="M4.5,27h27" fill="none" stroke="#fbfbfd"
+                                  stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                        </g>
+                    </svg>
+
                 </div>
+            </div>
 
-                <div class="col-8 col-lg-4 text-center">
-                    <h1 class="logo">Ocean Case</h1>
-                </div>
+            <div class="col-8 col-lg-4 text-center">
+                <!--logo-->
+                <a href="index.html"><h1 class="logo">Ocean Case</h1></a>
+            </div>
+            <div class="col-2 d-flex justify-content-end d-lg-none align-items-center pa">
 
-                <div class="col-2 d-flex justify-content-end d-lg-none align-items-center pa">
-                    <a href="indkoebskurv.html" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844"
-                             viewBox="0 0 29.956 25.844">
+                <a href="indkoebskurv.html"><svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
+                    <path id="Icon_material-shopping-basket" data-name="Icon material-shopping-basket"
+                          d="M23.572,12.534,17.608,3.6a1.352,1.352,0,0,0-1.13-.572,1.331,1.331,0,0,0-1.13.586L9.384,12.534H2.862A1.366,1.366,0,0,0,1.5,13.9a1.147,1.147,0,0,0,.054.368L5.013,26.886a2.708,2.708,0,0,0,2.614,1.988h17.7a2.736,2.736,0,0,0,2.628-1.988l3.459-12.622.041-.368a1.366,1.366,0,0,0-1.362-1.362Zm-11.179,0,4.085-5.991,4.085,5.991Zm4.085,10.893A2.723,2.723,0,1,1,19.2,20.7,2.731,2.731,0,0,1,16.478,23.427Z"
+                          transform="translate(-1.5 -3.03)" fill="#fff"/>
+                </svg></a></div>
+
+            <!--navbar og link til sider og burgermenu-->
+            <div class="nav col-12 col-lg-8">
+                <div class="row justify-content-end">
+                    <div class="col-lg-auto p-3 text-start a1"><a href="index.html">Forside</a></div>
+                    <div class="col-lg-auto p-3 text-start a1"><a href="mellemside.html">Shop</a></div>
+                    <div class="col-lg-auto p-3 text-start a1"><a href="kontakt.html">Kontakt</a></div>
+                    <div class="col-lg-auto p-3 text-start a1"><a href="om.html">Om os</a></div>
+                    <div class="col-lg-auto p-3 text-start a1"><a href="login.html">Login</a></div>
+                    <div class="col-lg-auto p-3 text-start a1 d-none d-lg-block"><a href="indkoebskurv.html">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
                             <path id="Icon_material-shopping-basket" data-name="Icon material-shopping-basket"
                                   d="M23.572,12.534,17.608,3.6a1.352,1.352,0,0,0-1.13-.572,1.331,1.331,0,0,0-1.13.586L9.384,12.534H2.862A1.366,1.366,0,0,0,1.5,13.9a1.147,1.147,0,0,0,.054.368L5.013,26.886a2.708,2.708,0,0,0,2.614,1.988h17.7a2.736,2.736,0,0,0,2.628-1.988l3.459-12.622.041-.368a1.366,1.366,0,0,0-1.362-1.362Zm-11.179,0,4.085-5.991,4.085,5.991Zm4.085,10.893A2.723,2.723,0,1,1,19.2,20.7,2.731,2.731,0,0,1,16.478,23.427Z"
                                   transform="translate(-1.5 -3.03)" fill="#fff"/>
                         </svg>
-                    </a>
-                </div>
-
-                <div class="nav col-12 col-lg-8">
-                    <div class="row justify-content-end">
-                        <div class="col-lg-auto p-3 text-start a1"><a href="index.html">Forside</a></div>
-                        <div class="col-lg-auto p-3 text-start a1"><a href="mellemside.html">Shop</a></div>
-                        <div class="col-lg-auto p-3 text-start a1"><a href="kontakt.html">Kontakt os</a></div>
-                        <div class="col-lg-auto p-3 text-start a1"><a href="om.html">Om os</a></div>
-                        <div class="col-lg-auto p-3 text-start a1"><a href="login.html">Login</a></div>
-                        <div class="col-lg-auto p-3 text-start a1 d-none d-lg-block"><a href="indkoebskurv.html"
-                                                                                        target="_blank">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844"
-                                 viewBox="0 0 29.956 25.844">
-                                <path id="Icon_material-shopping-basket" data-name="Icon material-shopping-basket"
-                                      d="M23.572,12.534,17.608,3.6a1.352,1.352,0,0,0-1.13-.572,1.331,1.331,0,0,0-1.13.586L9.384,12.534H2.862A1.366,1.366,0,0,0,1.5,13.9a1.147,1.147,0,0,0,.054.368L5.013,26.886a2.708,2.708,0,0,0,2.614,1.988h17.7a2.736,2.736,0,0,0,2.628-1.988l3.459-12.622.041-.368a1.366,1.366,0,0,0-1.362-1.362Zm-11.179,0,4.085-5.991,4.085,5.991Zm4.085,10.893A2.723,2.723,0,1,1,19.2,20.7,2.731,2.731,0,0,1,16.478,23.427Z"
-                                      transform="translate(-1.5 -3.03)" fill="#fff"/>
-                            </svg>
-                        </a></div>
-                    </div>
+                    </a></div>
                 </div>
             </div>
+
         </div>
+    </div>
 
 
         <!--Form som bruges til at få oplysninger fra brugeren. Denne info sendes så til back-end via URL-->
 
-        <div class="col text-center mt-5"><p>Tilmeld dig vores kundeklub og få gode fordele.</p></div>
+        <div class="tekst20 col text-center m-5"><p>Tilmeld dig vores kundeklub og få gode fordele.</p></div>
 
 
         <div class="container-fluid">
@@ -104,13 +124,13 @@
                 <div class="row mt-5">
                     <!--Brugernavn-->
                     <div class="col-12 px-4">
-                        <label for="navn">Brugernavn</label>
+                        <label class="brugernavn" for="navn">Brugernavn</label>
                         <input class="tekst_boks w-100 py-3 mt-2" id="navn" name="navn" type="text" value="">
                     </div>
 
                     <!--Password-->
                     <div class="col-12 px-4 mt-4">
-                        <label for="password">Password</label>
+                        <label class="password2" for="password">Password</label>
                         <input class="tekst_boks w-100 py-3 mt-2" name="password" type="password" id="password" value="">
                     </div>
                 </div>
