--- a/samsung.html
+++ b/samsung.html
@@ -111,7 +111,7 @@
 <div class="container-fluid">
     <div class="row h-100 align-items-center bg-primary">
         <div class="col text-center text-white">
-            <p class="p1">Samsung</p>
+            <h1 class="p1">Samsung</h1>
             <p class="mt-2">Køb et lækkert cover til din Samsung</p>
         </div>
     </div>
